<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--suppress AndroidElementNotAllowed -->
    <com.nfx.android.rangebarpreference.RangeBarPreferenceCompat
        android:defaultValue="@string/range_bar_default_value"
        android:key="@string/range_bar"
        android:summary="@string/range_bar_summary"
        android:title="@string/range_bar_title"
        app:rbp_measurementUnit="samples"
        app:rbp_tickEnd="@string/end_tick"
        app:rbp_tickInterval="@string/interval_tick"
        app:rbp_tickStart="@string/start_tick"
        app:rbp_view_defaultHighValue="@string/default_high_value"
        app:rbp_view_defaultLowValue="@string/default_low_value"/>
</PreferenceScreen>